# dim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  dub.json  dub.sdl
source/dim/imgui/: bind.d  glfwOGL2.d  glfw_ogl2.d  package.d  types.d
source/dim/stb/: image.d
source/dim/window/: base.d  config.d  window_glfw_ogl2.d
